Fixing z-index issue

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@
     cursor: pointer;
     height: 21px;
     width: 26px;
-    z-index: 2;
+    z-index: 3;
 
 }
 
@@ -146,6 +146,7 @@
     text-align: center;
     max-height: 0;
     transition: max-height .5s ease-out;
+    z-index: 2;
 }
 
 .h__nav__menu {
@@ -191,7 +192,7 @@
     height: 50vh;
     margin-left: 30px;
     background-color: var(--light-beige);
-    z-index: 2;
+    z-index: 1;
 }
 
 .m__heading {
